--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,27 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 		<title>Cookbook</title>
+
+		<script>
+			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
+			// if (
+			// 	localStorage.theme === 'dark' ||
+			// 	(!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)
+			// ) {
+			// 	document.querySelector('html').classList.add('dark');
+			// } else {
+			// 	document.querySelector('html').classList.remove('dark');
+			// }
+
+			// Whenever the user explicitly chooses light mode
+			// localStorage.theme = 'light';
+
+			// Whenever the user explicitly chooses dark mode
+			// localStorage.theme = 'dark';
+
+			// Whenever the user explicitly chooses to respect the OS preference
+			// localStorage.removeItem('theme');
+		</script>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
